--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "start": "lerna run start"
   },
   "devDependencies": {
-    "lerna": "^3.20.2"
+    "lerna": "^3.20.2",
+    "prettier": "^2.0.5",
+    "typescript": "^3.8.3"
   }
 }
