--- a/ormconfig.json
+++ b/ormconfig.json
@@ -1,4 +1,5 @@
 {
+  "name": "default",
   "type": "postgres",
   "host": "localhost",
   "port": 5432,
@@ -6,13 +7,6 @@
   "password": "postgres",
   "database": "postgres",
   "synchronize": true,
-  "logging": false,
-  "entities": ["src/entity/**/*.ts"],
-  "migrations": ["src/migration/**/*.ts"],
-  "subscribers": ["src/subscriber/**/*.ts"],
-  "cli": {
-    "entitiesDir": "src/entity",
-    "migrationsDir": "src/migration",
-    "subscribersDir": "src/subscriber"
-  }
+  "logging": true,
+  "entities": ["src/entity/**/*.*"]
 }
