--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -1,16 +1,24 @@
 {
   "name": "@improved-sniffle/server",
-  "version": "1.0.1",
+  "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "react": "^16.13.1"
+    "apollo-server-express": "^2.13.1",
+    "bcryptjs": "^2.4.3",
+    "class-validator": "^0.12.2",
+    "connect-redis": "^4.0.4",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "express-session": "^1.17.1",
+    "graphql": "^15.0.0",
+    "ioredis": "^4.16.3",
+    "pg": "^8.2.0",
+    "reflect-metadata": "^0.1.13",
+    "type-graphql": "^1.0.0-rc.1",
+    "typeorm": "^0.2.24"
   },
   "scripts": {
-    "test": "echo test script from server, version: $npm_package_version"
-  },
-  "devDependencies": {
-    "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.11"
+    "start": "tsnd --respawn src/index.ts"
   }
 }
