--- a/package.json
+++ b/package.json
@@ -10,16 +10,17 @@
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
-    "@types/connect-redis": "^0.0.13",
+    "@types/cookie-parser": "^1.4.2",
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.6",
-    "@types/express-session": "^1.17.0",
     "@types/graphql": "^14.5.0",
-    "@types/ioredis": "^4.16.2",
+    "@types/jsonwebtoken": "^8.5.0",
     "@types/node": "^14.0.1",
+    "@types/react-router-dom": "^5.1.5",
     "lerna": "^3.20.2",
+    "nodemon": "^2.0.4",
     "prettier": "^2.0.5",
-    "ts-node-dev": "^1.0.0-pre.44",
+    "ts-node": "^8.10.2",
     "typescript": "^3.9.2"
   }
 }
