--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -7,18 +7,21 @@
     "apollo-server-express": "^2.13.1",
     "bcryptjs": "^2.4.3",
     "class-validator": "^0.12.2",
-    "connect-redis": "^4.0.4",
+    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "express-session": "^1.17.1",
     "graphql": "^15.0.0",
-    "ioredis": "^4.16.3",
+    "jsonwebtoken": "^8.5.1",
     "pg": "^8.2.0",
     "reflect-metadata": "^0.1.13",
     "type-graphql": "^1.0.0-rc.1",
     "typeorm": "^0.2.24"
   },
   "scripts": {
-    "start": "tsnd --respawn src/index.ts"
+    "start": "nodemon --exec ts-node src/index.ts"
+  },
+  "devDependencies": {
+    "ts-node": "^8.10.2"
   }
 }
