--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.6",
     "@types/graphql": "^14.5.0",
+    "@types/jest": "^25.2.3",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/node": "^14.0.1",
+    "@types/react": "^16.9.35",
+    "@types/react-dom": "^16.9.8",
     "@types/react-router-dom": "^5.1.5",
     "lerna": "^3.20.2",
     "nodemon": "^2.0.4",
