--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/graphql": "^14.5.0",
     "@types/jest": "^25.2.3",
     "@types/jsonwebtoken": "^8.5.0",
+    "@types/jwt-decode": "^2.2.1",
     "@types/node": "^14.0.6",
     "@types/react": "^16.9.35",
     "@types/react-dom": "^16.9.8",
