--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -8,11 +8,14 @@
     "@testing-library/react": "^10.0.4",
     "@testing-library/user-event": "^10.4.0",
     "apollo-boost": "^0.4.9",
+    "apollo-link-token-refresh": "^0.3.0",
     "graphql": "^15.0.0",
+    "jwt-decode": "^2.2.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "typescript": "^3.9.3"
   },
   "scripts": {
     "start": "react-scripts start",
