--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@
 version: '3.7'
 services:
   postgres:
-    container_name: postgres
+    container_name: improved_sniffle_postgres
     image: postgres
     environment:
       POSTGRES_PASSWORD: postgres
