--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -10,6 +10,7 @@
     "apollo-boost": "^0.4.9",
     "apollo-link-token-refresh": "^0.3.0",
     "graphql": "^15.0.0",
+    "jayson": "^3.3.3",
     "jwt-decode": "^2.2.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
